added guardian onchain data
